@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1881 2003/12/15 04:03:25 jonnymind Exp $
+ * $Id: ChangeLog,v 1.1882 2003/12/15 06:13:29 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-12-15 15:08 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
+  * xharbour/source/vm/cmdarg.c
+    * fixed memory leak in hb_cmdargGet. Warning if the second param
+      is FALSE then returned value cannot be directly used but only
+      tested for (not) NULL
 
 2003-12-15 07:06 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
   * source/vm/thread.c
